--- a/style.css
+++ b/style.css
@@ -123,6 +123,11 @@ img{
 	padding-bottom: 35px;
 }
 
+a.GA_MasterEmailDesign{
+	color: teal;
+}
+
+
 .projectdescription > h2{
 	padding-bottom: 12px;
 }
