--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
 h1{
 	font-size: 1rem;
 	margin: 0;
+	color: #312f30;
 
 }
 
@@ -36,11 +37,12 @@ h2{
 	font-size: 11px;
 	letter-spacing: 2px;
 	font-weight: lighter;
-	color: #4e4e4e;
+	color: #312f30;
 	margin: 0;
 }
 
 p{
+	color: #312f30;
 	font-size: 14.75px;
 	line-height: 150%
 }
@@ -59,7 +61,7 @@ a.overlay h2, a.overlay h1 {
 }
 
 a.overlay:hover {
-	background-color: white;
+	background-color: #eef0ee;
 	opacity: .88;
 	color: black;
 }
@@ -188,7 +190,7 @@ a{
 }
 
 a:hover{
-	color: lightgrey;
+	color: #bca532;
 }
 
 .manipulation img {
