--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ img{
 
 .projectdescription{
 	color: black;
-	background-color: #f6f6f6;
+	background-color: white;
 	padding-top: 35px;
 	padding-left: 35px;
 	padding-right: 35px;
