--- a/style.css
+++ b/style.css
@@ -1,6 +1,35 @@
+/* poppins-regular - latin */
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+/*  font-weight: 100;*/
+  src: url('font/fonts/poppins-v15-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('font/fonts/poppins-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('font/fonts/poppins-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('font/fonts/poppins-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('font/fonts/poppins-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('font/fonts/poppins-v15-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
+}
+
+/* pt-mono-regular - latin */
+@font-face {
+  font-family: 'PT Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('font/fonts/pt-mono-v8-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('font/fonts/pt-mono-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('font/fonts/pt-mono-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('font/fonts/pt-mono-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('font/fonts/pt-mono-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('font/fonts/pt-mono-v8-latin-regular.svg#PTMono') format('svg'); /* Legacy iOS */
+}
+
+
 body{
-	background-color: #eef0ee;
-	font-family: helvetica;
+	background-color: #ffffff;
+	font-family: "Poppins", sans-serif;
 	margin-top: 35px;
 	margin-left: 50px;
 	margin-right: 50px;
@@ -28,28 +57,35 @@ body{
 
 h1{
 	font-size: 18.5px;
+	font-weight: 600;
 	margin: 0;
-	color: #312f30;
+	color: #222222;
 
 }
 
 h2{
 	font-size: 12px;
+	font-family: "PT Mono", sans-serif;
 	margin: 1;
-	letter-spacing: 2px;
+	letter-spacing: 1px;
 	font-weight: lighter;
-	color: #312f30;
+	color: #222222;
 	line-height: 125%
 }
 
 p{
-	color: #312f30;
+	color: #222222;
+	font-weight: 200;
 	font-size: 16.5px;
 	line-height: 150%
 }
 
 u{
 	text-decoration-color: #bca532;
+}
+
+b{
+	font-weight: 600;
 }
 
 /*hover over images*/
@@ -66,7 +102,7 @@ a.overlay h2, a.overlay h1 {
 }
 
 a.overlay:hover {
-	background-color: #eef0ee;
+	background-color: #f6f6f6;
 	opacity: .88;
 	color: black;
 }
@@ -195,7 +231,7 @@ a{
 }
 
 a:hover{
-	color: #bca532;
+	color: #47384a;
 }
 
 .manipulation img {
