--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body{
 
 
 h1{
-	font-size: 18px;
+	font-size: 18.5px;
 	font-weight: 600;
 	margin: 0;
 	color: #222222;
@@ -72,6 +72,7 @@ h2{
 	font-weight: lighter;
 	color: #222222;
 	line-height: 125%
+	background-color: blue;
 }
 
 p{
