--- a/style.css
+++ b/style.css
@@ -72,7 +72,13 @@ h2{
 	font-weight: lighter;
 	color: #222222;
 	line-height: 125%
-	background-color: blue;
+}
+
+h3{
+	font-size: 24.5px;
+	font-family: "PT Mono", sans-serif;
+	font-weight: lighter;
+	line-height: 125%
 }
 
 p{
@@ -88,6 +94,11 @@ u{
 
 b{
 	font-weight: 500;
+}
+
+
+mark{
+	background-color: #ededed;
 }
 
 /*hover over images*/
@@ -225,6 +236,7 @@ a{
 	font-size: 15.5px;
 	text-decoration: none;
 	color: black;
+	line-height: 25%
 }
 
 a:hover{
