--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a:visited {
     color:white;
     mix-blend-mode: exclusion;
     position: fixed;
-    text-transform: lowercase;
+/*    text-transform: uppercase;*/
     width:100%;
     border-bottom: solid 1px;
 }
@@ -223,7 +223,7 @@ a:visited {
     color:white;
     mix-blend-mode: exclusion;
     position: fixed;
-    text-transform: lowercase;
+/*    text-transform: uppercase;*/
     width:100%;
     border-bottom: solid 1px;
 }
@@ -349,7 +349,7 @@ a:visited {
     color:white;
     mix-blend-mode: exclusion;
     position: fixed;
-    text-transform: lowercase;
+/*    text-transform: uppercase;*/
     width:100%;
     border-bottom: solid 1px;
 }
@@ -485,7 +485,7 @@ a:visited {
     padding-left:40px;
     padding-top: 18px;
     position: fixed;
-    text-transform: lowercase;
+/*    text-transform: uppercase;*/
     width:100%;
     border-bottom: solid 1px;
     background-color: #fffff9;
@@ -596,7 +596,7 @@ p span{
     padding-left:20px;
     padding-top: 18px;
     position: fixed;
-    text-transform: lowercase;
+/*    text-transform: lowercase;*/
     width:100%;
     border-bottom: solid 1px;
     background-color: #fffff9;
