--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, html{
     font-family: sans-serif;
     font-family: "Helvetica";
     font-weight:300;
-    background: #fffff9;
+    background: #FBFBFB;
 
 }
 
@@ -50,7 +50,16 @@ b {
 @media screen and (max-width:100000000px) and (min-width:1851px){
 
 
-
+h1{
+   font-size: 14px; 
+    line-height: 18px;
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight:300; 
+    padding-right:4vw;
+    padding-top: 12px;
+    text-transform: ;
+}
 
 .nav {
     float: left;
@@ -59,8 +68,8 @@ b {
     text-align: left;
     padding-left:4vw;
     padding-top: 18px;
-    color:white;
-    mix-blend-mode: exclusion;
+    color:black;
+/*    mix-blend-mode: exclusion;*/
     position: fixed;
 /*    text-transform: uppercase;*/
     width:100%;
@@ -188,7 +197,16 @@ b {
 
 @media screen and (max-width:1850px) and (min-width:1400px){
 
-
+h1{
+   font-size: 14px; 
+    line-height: 18px;
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight:300; 
+    padding-right:4vw;
+    padding-top: 12px;
+    text-transform: ;
+}
 
 .nav {
     float: left;
@@ -197,8 +215,8 @@ b {
     text-align: left;
     padding-left:4vw;
     padding-top: 18px;
-    color:white;
-    mix-blend-mode: exclusion;
+    color:black;
+/*    mix-blend-mode: exclusion;*/
     position: fixed;
 /*    text-transform: uppercase;*/
     width:100%;
@@ -208,6 +226,7 @@ b {
 .nav-mobile{
     display: none;
 }
+
 
 #div1 {
     font-size: 36; 
@@ -228,6 +247,7 @@ b {
     margin-left: 45%;
 
 }
+
 
 
 .title{
@@ -311,7 +331,16 @@ b {
 
 @media screen and (max-width:1399px) and (min-width: 900px){
 
-
+h1{
+   font-size: 14px; 
+    line-height: 18px;
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight:300; 
+    padding-right:4vw;
+    padding-top: 12px;
+    text-transform: ;
+}
 
 
 .nav {
@@ -321,8 +350,8 @@ b {
     text-align: left;
     padding-left:4vw;
     padding-top: 18px;
-    color:white;
-    mix-blend-mode: exclusion;
+    color:black;
+/*    mix-blend-mode: exclusion;*/
     position: fixed;
 /*    text-transform: uppercase;*/
     width:100%;
@@ -332,6 +361,7 @@ b {
 .nav-mobile{
     display: none;
 }
+
 
 #div1 {
     font-size: 36; 
@@ -351,6 +381,7 @@ b {
     padding-top: 120px;
     margin-left: 80%;
 }
+
 
 
 .title{
@@ -449,7 +480,16 @@ b {
 
 @media screen and (max-width:899px) and (min-width: 500px){
 
-
+h1{
+   font-size: 14px; 
+    line-height: 18px;
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight:300; 
+    padding-right:4vw;
+    padding-top: 12px;
+    text-transform: ;
+}
 
 
 .nav-mobile {
@@ -464,7 +504,7 @@ b {
 /*    text-transform: uppercase;*/
     width:100%;
     border-bottom: solid 1px;
-    background-color: #fffff9;
+    background-color: ##FBFBFB;
 }
 
 .nav {
@@ -484,6 +524,8 @@ b {
 
 }
 
+
+
 .title{
     font-size: 36; 
     line-height: 1.13;
@@ -492,24 +534,28 @@ b {
     padding-top: 120px;
     display:block;
     position:fixed;
-    mix-blend-mode: exclusion;
-    color:white;
+/*    mix-blend-mode: exclusion;*/
+    color:bl;
 }
 
 .contact{
     display: none;
 }
 
+
 #div2 { 
     font-size: 36; 
     font-style: normal; 
     font-variant: normal; 
     font-weight: 300; 
+    padding-top: 285px;
     width: 100%; 
     float: left;
     color:#000;
     display: block;
 }
+
+
 
 .services{
     line-height: 1.13;
@@ -563,6 +609,7 @@ p span{
 
 @media screen and (max-width:499px) and (min-width: 100px){
 
+
 .nav-mobile {
     float: left;
     font-size: 12; 
@@ -575,7 +622,7 @@ p span{
 /*    text-transform: lowercase;*/
     width:100%;
     border-bottom: solid 1px;
-    background-color: #fffff9;
+    background-color: #FBFBFB;
 }
 
 .nav{
@@ -602,8 +649,8 @@ p span{
     padding-top: 120px;
     display:block;
     position:fixed;
-    mix-blend-mode: exclusion;
-    color:white;
+/*    mix-blend-mode: exclusion;*/
+    color:black;
 }
 
 .contact{
