--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ h1{
 
 
 #div1 {
-    font-size: 36; 
+    font-size: 36;
+    line-height: 42;  
     font-style: normal; 
     font-variant: normal; 
     font-weight: 300; 
@@ -91,7 +92,8 @@ h1{
 }
 
 #div2 { 
-    font-size: 36; 
+    font-size: 36;
+    line-height: 42; 
     font-style: normal; 
     font-variant: normal; 
     font-weight: 300; 
@@ -608,6 +610,18 @@ p span{
 /* BREAKPONT 3 BREAKPONT 3 BREAKPONT 3 BREAKPONT 3 BREAKPONT 3 BREAKPONT 3 BREAKPONT 3 BREAKPONT 3 BREAKPONT 3   */
 
 @media screen and (max-width:499px) and (min-width: 100px){
+
+h1{
+   font-size: 14px; 
+    line-height: 18px;
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight:300; 
+    padding-right:4vw;
+    padding-top: 12px;
+    text-transform: ;
+}
+
 
 
 .nav-mobile {
